# mplfooty

./: README.md
afl_plots/: dimensions.py  pitch.py  pitch_base.py  pitch_plot.py
mplfooty/: dimensions.py  pitch_plot.py  pyproject.toml
mplfooty/mplfooty/: dimensions.py  pitch.py  pitch_base.py  pitch_plot.py
notebooks/: annotate_example.ipynb  contour_example.ipynb  convexhull_example.ipynb  flow_example.ipynb  goal_angle_example.ipynb  grid_example.ipynb  heatmap_example.ipynb  hexbin_example.ipynb  kdeplot_example.ipynb  pitch_example.ipynb  plot_example.ipynb  plotting-pitch.ipynb  polygon_example.ipynb  scatter_example.ipynb  vertical_pitch_example.ipynb  voronoi_example.ipynb
