[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mplfooty"
version = "0.0.3"
description = "AFL pitch plotting using matplotlib"
readme = "README.md"
authors = [{name = "Ciaran Grant", email = "ciaran.grant@hotmail.co.uk"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "pandas == 1.5.3",
    "numpy == 1.23.5",
    "scikit-learn == 1.2.2",
    "seaborn == 0.12.2",
    "matplotlib == 3.7.1",
    "scipy == 1.10.1",
    "notebook == 6.5.3",
    "jupyter == 1.0.0",
    "jupyter_server == 1.23.4",
    "nbclient == 0.5.13",
    "matplotlib_inline == 0.1.6"
]
[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/ciaran-grant/mplfooty"